# AQL

./: .gitignore  AQL_Grammar_Specification.md  Cargo.toml  README.md  index.html
aql-agent/: README.md  demo.py  pyproject.toml
aql-agent/aql_agent/: __init__.py  agent.py
aql-agent/aql_agent/scenarios/: __init__.py  k8s.py  rtb.py
aql-parser/: README.md  pyproject.toml
aql-parser/aql_parser/: __init__.py  errors.py  parser.py  types.py
aql-parser/grammar/: aql.lark
aql-parser/tests/: test_failures.py  test_modifiers.py  test_roundtrip.py  test_spec.py  test_verbs.py
aql-query-planner/: README.md  pyproject.toml
aql-query-planner/aql_planner/: __init__.py  errors.py  estimator.py  planner.py  router.py  task.py
aql-query-planner/tests/: test_estimator.py  test_planner.py  test_router.py
aql-ref-db/: README.md  pyproject.toml
aql-ref-db/aql_db/: __init__.py  errors.py  executor.py  merger.py  store.py
aql-ref-db/aql_db/backends/: __init__.py  base.py  episodic.py  procedural.py  semantic.py  tools.py  working.py
aql-ref-db/tests/: test_episodic.py  test_executor.py  test_integration.py  test_procedural.py  test_semantic.py  test_tools.py  test_working.py
crates/aql-parser/: Cargo.toml
crates/aql-parser/src/: parser.rs
crates/clawdb/: Cargo.toml
crates/clawdb-wasm/: Cargo.toml
crates/clawdb-wasm/src/: executor.rs  lib.rs  memory.rs  semantic.rs
crates/clawdb/src/: config.rs  db.rs  error.rs  executor.rs  lib.rs  planner.rs  types.rs
crates/clawdb/src/backends/: lance.rs  mod.rs
crates/clawdb/tests/: conformance.rs
grammar/: aql.pest
playground/: index.html
playground/pkg/: clawdb_wasm.d.ts  clawdb_wasm.js  clawdb_wasm_bg.wasm  clawdb_wasm_bg.wasm.d.ts  package.json
spec/: AQL_SPEC_v0.2.md  AQL_SPEC_v0.3.md  AQL_SPEC_v0.4.md  AQL_SPEC_v0.5.md
tests/: README.md
tests/coverage/: coverage_matrix.md
tests/fixtures/: seed.aql
tests/suites/: 01_scan.yaml  02_recall.yaml  03_lookup.yaml  04_load.yaml  05_store.yaml  06_update.yaml  07_forget.yaml  08_link.yaml  09_with_links.yaml  10_follow_links.yaml  11_reflect.yaml  12_pipeline.yaml  13_aggregate.yaml  14_having.yaml  15_scope_namespace.yaml  16_dotted_fields.yaml  17_validation.yaml  21_edge_cases.yaml
