[workspace]
resolver = "2"
members = [
    "crates/aql-parser",
    "crates/clawdb",
    "crates/clawdb-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Internal crates
aql-parser = { path = "crates/aql-parser" }
clawdb = { path = "crates/clawdb" }

# Core dependencies
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
