[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aql-agent"
version = "0.1.0"
description = "Demo agent using AQL/ADB for memory"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sriram Reddy" }]
keywords = ["agents", "memory", "query-language", "aql", "adb", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "aql-ref-db>=0.1",
]

[project.optional-dependencies]
llm = ["anthropic>=0.20"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/srirammails/AQL"
Repository = "https://github.com/srirammails/AQL"

[project.scripts]
aql-demo = "demo:main"

[tool.hatch.build.targets.wheel]
packages = ["aql_agent"]
