[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aql-parser"
version = "0.4.0"
description = "Parser for AQL - Agent Query Language"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sriram Reddy" }]
keywords = ["agents", "memory", "query-language", "aql", "adb", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = ["lark>=1.1"]

[project.urls]
Homepage = "https://github.com/srirammails/AQL"
Repository = "https://github.com/srirammails/AQL"
Documentation = "https://github.com/srirammails/AQL/blob/main/spec/AQL_SPEC_v0.4.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["aql_parser"]

[tool.hatch.build.targets.sdist]
include = [
    "aql_parser/",
    "grammar/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["aql_parser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]
