[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aql-query-planner"
version = "0.1.0"
description = "Query planner for AQL - routes and schedules execution"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sriram Reddy" }]
keywords = ["agents", "memory", "query-language", "aql", "adb", "planner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = ["aql-parser>=0.4"]

[project.urls]
Homepage = "https://github.com/srirammails/AQL"
Repository = "https://github.com/srirammails/AQL"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["aql_planner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
