[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aql-ref-db"
version = "0.1.0"
description = "Reference implementation of ADB - Agent Database"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sriram Reddy" }]
keywords = ["agents", "memory", "query-language", "aql", "adb", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "aql-parser>=0.4",
    "aql-query-planner>=0.1",
]

[project.optional-dependencies]
full = [
    "pandas>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pandas>=2.0", "numpy>=1.24", "networkx>=3.0"]

[project.urls]
Homepage = "https://github.com/srirammails/AQL"
Repository = "https://github.com/srirammails/AQL"

[tool.hatch.build.targets.wheel]
packages = ["aql_db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
