[package]
name = "clawdb-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM playground for AQL - Agent Query Language"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aql-parser = { path = "../aql-parser" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind"] }
once_cell = "1.19"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
