[package]
name = "clawdb"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ClawDB - Single-node Agent Database with direct LanceDB storage"

[dependencies]
# Internal crates
aql-parser = { path = "../aql-parser" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# LanceDB
lancedb = "0.15"
arrow = { version = "53", features = ["prettyprint"] }
arrow-array = "53"
arrow-schema = "53"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
